Web Inspector: [Elements] Word wrap disablement in the DOM tree broken https://bugs.webkit.org/show_bug.cgi?id=97185
Reviewed by Pavel Feldman.

Restored the effective "white-space: nowrap" for the tree elements.

* inspector/front-end/inspector.css:
(.nowrap):

Canonical link: https://commits.webkit.org/115169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129117 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/inspector.css
+++ b/Source/WebCore/inspector/front-end/inspector.css
@@ -44,7 +44,7 @@ input[type="search"]:focus, input[type="text"]:focus {
 }
 
 .nowrap {
-    white-space: nowrap;
+    white-space: nowrap !important;
 }
 
 #toolbar {
